created basic files

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,23 @@
-FROM ubuntu:latest
-LABEL authors="shkit"
+FROM python:3.12-alpine
 
-ENTRYPOINT ["top", "-b"]
+
+ENV PYTHONFAULTHANDLER=1 \
+    PYTHONUNBUFFERED=1 \
+    PYTHONHASHSEED=random \
+    PIP_NO_CACHE_DIR=off \
+    PIP_DISABLE_PIP_VERSION_CHECK=on \
+    PIP_DEFAULT_TIMEOUT=100 \
+    POETRY_VERSION=1.5.1
+
+RUN pip install "poetry==$POETRY_VERSION"
+
+WORKDIR /app
+
+COPY nginx/parser_shop_api.crt /app/
+COPY poetry.lock pyproject.toml /app/
+
+RUN poetry config virtualenvs.create false && poetry install --no-dev --no-interaction --no-ansi
+
+COPY src /app/src
+
+CMD ["python", "-m", "src"]
