--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 loguru = "^0.7.2"
 fastapi = {extras = ["all"], version = "^0.112.0"}
 json2xml = "^5.0.2"
+requests = "^2.32.3"
 
 
 [build-system]
