--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ loguru = "^0.7.2"
 fastapi = {extras = ["all"], version = "^0.112.0"}
 json2xml = "^5.0.2"
 requests = "^2.32.3"
+apscheduler = "^3.10.4"
 
 
 [build-system]
