created redis service to store amount of requests sent to prevent api's ban

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,9 +13,15 @@ services:
   parser_shop_api:
     env_file:
       - ../.env/.env
+    depends_on:
+      - redis
     build:
       dockerfile: ./docker/Dockerfile
       context: ../
     volumes:
       - ../logs:/app/logs
       - ../files:/app/files
+
+  redis:
+    image: redis:7.2.3
+    restart: on-failure
