--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ readme = "README.md"
 python = "^3.12"
 loguru = "^0.7.2"
 fastapi = {extras = ["all"], version = "^0.112.0"}
-json2xml = "^5.0.2"
 requests = "^2.32.3"
 apscheduler = "^3.10.4"
 redis = "^5.0.8"
+dict2xml = "^1.7.5"
 
 
 [build-system]
